creation de deux composant un plainText et une editText. positionement relatif de l'un par rapport a l'autre avec avec aligement des text avec l'attribut layout_alignBaseline

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -20,10 +20,9 @@
         android:id="@+id/editTextTextPersonName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignBaseline="@id/textView4"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="17dp"
-        android:layout_toEndOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView4"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name" />
