--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,13 +72,13 @@
     </RadioGroup>
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/radioGroupId"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="12dp"
+        android:layout_alignStart="@+id/radioGroupId"
+        android:layout_marginStart="-11dp"
+        android:layout_marginTop="-181dp"
         android:text="TextView" />
 
 </RelativeLayout>
