--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,81 +4,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="27dp"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView4"
-        android:layout_alignStart="@+id/textView4"
-        android:layout_marginStart="-1dp"
-        android:layout_marginTop="31dp"
-        android:text="TextView" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/textView4"
-        android:layout_marginStart="44dp"
-        android:layout_toEndOf="@+id/textView4"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="nom" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/textView2"
-        android:layout_alignStart="@+id/editTextTextPersonName"
-        android:layout_marginStart="0dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="prénom" />
-
-    <RadioGroup
-        android:id="@+id/radioGroupId"
-        android:layout_width="391dp"
-        android:layout_height="55dp"
-        android:layout_below="@+id/editTextTextPersonName4"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="17dp"
-        android:orientation="horizontal">
-
-        <RadioButton
-            android:id="@+id/radioButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="RadioButton" />
-
-        <RadioButton
-            android:id="@+id/radioButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="RadioButton" />
-    </RadioGroup>
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/radioGroupId"
-        android:layout_alignStart="@+id/radioGroupId"
-        android:layout_marginStart="-11dp"
-        android:layout_marginTop="-181dp"
-        android:text="TextView" />
-
-</RelativeLayout>
+    tools:context=".MainActivity"/>
