--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dateTextViewId"
+        android:layout_alignStart="@+id/dateTextViewId"
+        android:layout_alignEnd="@+id/editTextDate"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="0dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/student" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/lastNameTextViewId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="22dp"
         android:text="Nom"
         android:textSize="20sp" />
 
@@ -35,7 +54,7 @@
         android:layout_alignBaseline="@id/lastNameTextViewId"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="32dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginEnd="22dp"
         android:layout_toEndOf="@+id/lastNameTextViewId"
         android:ems="10"
         android:hint="saisir votre nom"
@@ -205,6 +224,5 @@
         android:ems="10"
         android:inputType="date"
         android:onClick="editTextDateOnClickEventListener" />
-
 
 </RelativeLayout>
