--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,25 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/dateTextViewId"
-        android:layout_alignStart="@+id/dateTextViewId"
-        android:layout_alignEnd="@+id/editTextDate"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="0dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/student" />
-    </LinearLayout>
-
     <TextView
         android:id="@+id/lastNameTextViewId"
         android:layout_width="wrap_content"
@@ -225,4 +206,16 @@
         android:inputType="date"
         android:onClick="editTextDateOnClickEventListener" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editTextDate"
+        android:layout_alignStart="@+id/dateTextViewId"
+        android:layout_alignEnd="@+id/editTextDate"
+        android:layout_marginStart="107dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="97dp"
+        android:layout_weight="1"
+        app:srcCompat="@drawable/student" />
 </RelativeLayout>
